Median commit, add favorite movie, start rewriting
