# handlers/user.go
@@ -13,21 +13,21 @@ import (
 )
 
 // TODO: check is it correct signature `rw` interface and not pointer-like... It's weird
-func writeResponseBody(rw http.ResponseWriter, user models.UserData) {
-	response_user := user.ToResponse()
-	response_user_byte, err := json.Marshal(response_user)
-	if err != nil {
-		log.Println(err)
-		http.Error(rw, "Can't convert user data to response json", 500)
-	}
-
-	rw.Header().Set("Content-Type", "application/json")
-	_, err = rw.Write(response_user_byte)
-	if err != nil {
-		log.Println(err)
-		http.Error(rw, "Can't send user data", 500)
-	}
-}
+// func writeresponsebody(rw http.responsewriter, user models.userdata) {
+// 	responseUser := user.ToResponse()
+// 	responseUserByte, err := json.Marshal(responseUser)
+// 	if err != nil {
+// 		log.Println(err)
+// 		http.Error(rw, "Can't convert user data to response json", 500)
+// 	}
+//
+// 	rw.Header().Set("Content-Type", "application/json")
+// 	_, err = rw.Write(responseUserByte)
+// 	if err != nil {
+// 		log.Println(err)
+// 		http.Error(rw, "Can't send user data", 500)
+// 	}
+// }
 
 // @Summary      Show user
 // @Description  Get user by id
@@ -48,7 +48,7 @@ func GetUserHandlerMake(db *sql.DB) http.HandlerFunc {
 			http.Error(rw, fmt.Sprintf("Can't get user id: %s\n", id), 404)
 			return
 		}
-		writeResponseBody(rw, user)
+		writeResponseBody[models.UserDataResponse](rw, user, "user")
 
 	}
 	return GetUserHandler
@@ -66,8 +66,7 @@ func GetUserHandlerMake(db *sql.DB) http.HandlerFunc {
 // @Failure      404  {object}  map[string]string
 // @Failure      500  {object}  map[string]string
 // @Router       /user/{id} [PATCH]
-// @Router       /user/{id} [PUT]
-func UpdateUserHandler(db *sql.DB) http.HandlerFunc {
+func UpdateUserHandlerMake(db *sql.DB) http.HandlerFunc {
 	UpdateUserHandler := func(rw http.ResponseWriter, r *http.Request) {
 		decoder := json.NewDecoder(r.Body)
 		decoder.DisallowUnknownFields() // Strict parsing
@@ -104,7 +103,7 @@ func UpdateUserHandler(db *sql.DB) http.HandlerFunc {
 // @Failure      404  {object}  map[string]string
 // @Failure      500  {object}  map[string]string
 // @Router       /user [post]
-func CreateUserHandler(db *sql.DB) http.HandlerFunc {
+func CreateUserHandlerMake(db *sql.DB) http.HandlerFunc {
 	CreateUserHandler := func(rw http.ResponseWriter, r *http.Request) {
 		decoder := json.NewDecoder(r.Body)
 		decoder.DisallowUnknownFields() // Strict parsing
